# uptime_monitor

./: .gitignore  Dockerfile  Makefile  README.md  async_scheduler.py  consume.py  db_consumer.py  docker-compose-support.yaml  docker-compose.yaml  docker-entrypoint.sh  env_local  produce.py  pyproject.toml  settings.py  test_website_checker.py  website_checker.py
consumer/: db_conn.py  db_consumer.py  db_writer.py  entity.py  set_partition.py  settings.py
consumer/tests/: conftest.py
db_utils/: create_multiple_db.sh  create_tables.sh
diagrams/: flow.drawio
site_checker/: async_scheduler.py  entity.py  job_consumer.py  kafka_conn.py  scheduler.py  settings.py  website_checker.py
site_checker/db/: async_db_conn.py  db_conn.py  jobs.py
site_checker/tests/: test_job_consumer.py  test_website_checker.py
utils/: create_schedule_data.sh
