[tool.poetry]
name = "uptime_monitor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
marshmallow = "^3.14.0"
kafka-python = "^2.0.2"
psycopg2 = "^2.9.1"
schedule = "^1.1.0"
requests = "^2.26.0"
pytest = "^6.2.5"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
responses = "^0.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
